--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -1,17 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
-  namespace: autodeployx
-  labels:
-    app: backend
+  name: backend
+  namespace: autodeploy
 spec:
-  type: NodePort
   selector:
     app: backend
   ports:
-  - name: http
-    protocol: TCP
-    port: 5000
+  - port: 5000
     targetPort: 5000
-    nodePort: 30500
+    nodePort: 30081
+  type: NodePort
