Fix namespace issues - use autodeploy everywhere

--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
-  namespace: autodeployx
+  namespace: autodeploy
   labels:
     app: frontend
 spec:
