--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: autodeployx
+  name: autodeploy
   labels:
-    name: autodeployx
+    name: autodeploy
     monitoring: enabled
