--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -3,10 +3,8 @@ kind: Deployment
 metadata:
   name: backend
   namespace: autodeploy
-  labels:
-    app: backend
 spec:
-  replicas: 2
+  replicas: 1                     # start with 1 replica to save cost
   selector:
     matchLabels:
       app: backend
@@ -16,20 +14,50 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: sarika1731/autodeploy-backend:latest
-        ports:
-        - containerPort: 5000
-        imagePullPolicy: Always
-        env:
-        - name: PORT
-          value: "5000"
-        - name: NODE_ENV
-          value: "production"
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "500m"
+        - name: backend
+          image: 501097441260.dkr.ecr.ap-south-1.amazonaws.com/autodeploy-backend:latest
+          imagePullPolicy: IfNotPresent   # avoid repeated pulls
+          ports:
+            - containerPort: 5000
+          env:
+            - name: PORT
+              value: "5000"
+            - name: NODE_ENV
+              value: "production"
+            - name: GEMINI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: GEMINI_API_KEY
+            - name: GITHUB_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: GITHUB_TOKEN
+            - name: HUGGINGFACE_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: app-secrets
+                  key: HUGGINGFACE_API_KEY
+          # Tight, conservative resources to reduce required node size / counts
+          resources:
+            requests:
+              memory: "128Mi"   # small baseline
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "300m"
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            failureThreshold: 5
