--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -1,30 +1,18 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: frontend
+  name: frontend-service
   namespace: autodeploy
+  labels:
+    app: frontend
 spec:
-  replicas: 2
+  type: NodePort
   selector:
-    matchLabels:
-      app: frontend
-  template:
-    metadata:
-      labels:
-        app: frontend
-    spec:
-      containers:
-      - name: frontend
-        image: sarika1731/autodeploy-frontend:latest
-        ports:
-        - containerPort: 80
-        envFrom:
-        - configMapRef:
-            name: app-config
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
-            cpu: "200m"
+    app: frontend
+  ports:
+  - name: http
+    protocol: TCP
+    port: 80
+    targetPort: 80
+    # Remove fixed nodePort to avoid conflicts; let Kubernetes assign one automatically
+    # If you need a fixed port, set `nodePort` to a free value within the cluster's NodePort range.
